--- a/pytorch_basics/3 PyTorch - Derivatives.ipynb
+++ b/pytorch_basics/3 PyTorch - Derivatives.ipynb
@@ -313,7 +313,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a0033bcbc8>"
+       "<matplotlib.legend.Legend at 0x24bdab33608>"
       ]
      },
      "execution_count": 12,
@@ -365,6 +365,125 @@
    "source": [
     "print(torch.ones(10))\n",
     "print(torch.ones(3, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.],\n",
+       "        [2., 2.]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2 * torch.ones(100, 2)"
    ]
   },
   {
@@ -422,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -463,10 +582,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1a004c39708>]"
+       "[<matplotlib.lines.Line2D at 0x24bdab5e5c8>]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -490,16 +609,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a004b93f48>"
+       "<matplotlib.legend.Legend at 0x24bdac2a508>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,16 +643,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a004ceea48>"
+       "<matplotlib.legend.Legend at 0x24bdacb2f48>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -560,16 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a004d8ad88>"
+       "<matplotlib.legend.Legend at 0x24bdad5b388>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -601,16 +720,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a0051576c8>"
+       "<matplotlib.legend.Legend at 0x24bdadd3a08>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -637,16 +756,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1a0051d0688>"
+       "<matplotlib.legend.Legend at 0x24bdae4cfc8>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -671,6 +790,20 @@
     "plt.plot(x.detach().numpy(), x.grad.detach().numpy(), label = 'derivative')\n",
     "plt.legend()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
